# bikepacker-tracker-blog

./: .env  CLEANUP_SUMMARY.md  MIGRATION_TO_STATIC_DATA.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy.yml  deploy_backend.yml  deploy_frontend.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/api/: main.py
backend/api/handlers/posts/: __init__.py  base.py  local.py  s3.py
backend/api/models/: authors.py  posts.py
backend/api/routes/: __init__.py  authors.py  posts.py
backend/api/utils/: content_loader.py
backend/content/authors/: jasper-williams.json  sofia-mendez.json
backend/content/posts/: alpine-crossing-challenge.md  beginning-the-journey.md  gear-review-six-months-in.md
backend/scripts/: start_server.sh
backend/scripts/deploy/: build.sh  deploy.sh  push.sh  run.sh
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  template-global.yaml  template-regional.yaml  template.yaml  vite.config.ts
frontend/content/posts/: Part-1 copy 2.md  Part-1 copy.md  Part-1.md  part-1.md  part-2.md
frontend/public/strava_data/: .gitkeep  README.md  activities_summary.json  collection_summary.json  photos_all.json  progress.json
frontend/scripts/: deploy-content.js
frontend/src/: App.tsx  main.tsx
frontend/src/data/: plannedRoutePost.ts
frontend/src/hooks/: useActivitySelection.tsx  (+5 more)
src/hooks/: usePosts.tsx  useStravaData.tsx
src/lib/: activity-processor.ts
src/pages/: HomePage.tsx  PostPage.tsx
src/services/: posts.ts  strava.ts
src/types/: Author.tsx
(+325 files in other folders)
